# goblin

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
configs/: filters.yaml  profiles.example.yaml  ranking.yaml  sources.yaml
src/goblin/: cli.py  commands.py  config.py  dedup.py  fetch.py  filter_store.py  filters.py  handler.py  model.py  profiles.py  rank.py  requirements.txt  schedule.py  slack.py  slack_events.py
src/goblin/collectors/: remotive.py
src/goblin/util/: log.py
tests/: conftest.py  test_commands.py  test_config.py  test_dedup.py  test_fetch.py  test_filter_store.py  test_filters.py  test_model.py  test_profiles.py  test_rank.py  test_schedule.py  test_slack_blocks.py  test_slack_events.py
